--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "com.example.anchalgarg.somegame"
+        applicationId "com.ex.anchalgarg.somegame"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.5'
     testCompile 'junit:junit:4.12'
 }
